Fixed a few bugs related to opening an .ops project or media file via command line args (i.e. openshot "my_project.osp"). Also, increased the max zoom in on the zoom slider, to 1 second=100 pixels (which is probably too close for most)... but useful when you are trying to sequence lots of fast flashing images. Also fixed a regression with the new caching code, when the app is starting up (race condition).

--- a/src/timeline/media/css/debug.css
+++ b/src/timeline/media/css/debug.css
@@ -8,7 +8,7 @@
 	padding: 5px;
 	background-color: silver;
 	border-radius: 8px;
-	opacity: 0.75;
+	opacity: 0.15;
 	cursor: pointer;
 }
 
